crates/saya-cli/src/interactive/tui/ui/surface/snapshots/saya_cli__interactive__tui__ui__surface__empty_state__tests__empty_state_has_next_action.snap
---
source: crates/saya-cli/src/interactive/tui/ui/surface/empty_state_tests.rs
expression: buffer
---
"                                                                                "
"                                     ▄     ▄                                    "
"                                     ███████                                    "
"                                    ██ ▐ ▌ ██                                   "
"                                    ████▼████                                   "
"                                     ███████                                    "
"                                                                                "
"                                     ◆ saya                                     "
"                      Ask your databases in plain language.                     "
"                                                                                "
"                         No database is configured yet.                         "
"             Try it now: `saya demo` — a read-only sample database.             "
"          Run `saya config init` — it prints where it wrote the files.          "
"          Add your database there, then `saya connection test <name>`.          "
"                           Restart saya to pick it up.                          "
"                                                                                "
"              `saya config doctor` explains anything still missing.             "
"                                                                                "
"               No workspace is bound: file tools are unavailable;               "
"            launch inside a git worktree or pass `--workspace <dir>`.           "
"                                                                                "
"         Each request becomes a chapter — activity, answer, and results.        "
"                                                                                "
"                                   try asking                                   "
"                            which tables track billing?                         "
"                            top 5 customers by revenue                          "
"                 compare row counts across the connected databases              "
"                                                                                "
"               / commands     @ tables     ? help     Ctrl+C quit               "
"                                                                                "
