crates/saya-cli/src/interactive/tui/ui/surface/snapshots/saya_cli__interactive__tui__ui__surface__empty_state__tests__the_composed_first_screen_keeps_the_hint_on_a_short_terminal.snap
---
source: crates/saya-cli/src/interactive/tui/ui/surface/empty_state_tests.rs
expression: buffer
---
"saya · Database read-only · No workspace bound · Data sharing on                "
"                                                                                "
"                                                                                "
"                         No database is configured yet.                         "
"             Try it now: `saya demo` — a read-only sample database.             "
"                  Or run `saya setup` for a guided connection.                  "
"          Run `saya config init` — it prints where it wrote the files.          "
"          Add your database there, then `saya connection test <name>`.          "
"                           Restart saya to pick it up.                          "
"                                                                                "
"              `saya config doctor` explains anything still missing.             "
"                                                                                "
"               No workspace is bound: file tools are unavailable;               "
"            launch inside a git worktree or pass `--workspace <dir>`.           "
"                                                                                "
"         Each request becomes a chapter — activity, answer, and results.        "
"                                                                                "
"               / commands     @ tables     ? help     Ctrl+C quit               "
"                                                                                "
"                                                                                "
"analytics · qwen                                                      ? for help"
"╭ saya ────────────────────────────────────────────────────────────────────────╮"
"│Ask about your data, or type / for commands                                   │"
"╰ Enter sends ─────────────────────────────────────────────────────────────────╯"
