crates/saya-cli/src/interactive/tui/ui/surface/snapshots/saya_cli__interactive__tui__ui__surface__empty_state__tests__the_first_screen_asks_about_the_users_own_tables.snap
---
source: crates/saya-cli/src/interactive/tui/ui/surface/empty_state_tests.rs
expression: buffer
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                   ▄▄       ▄▄                                  "
"                                   ███████████                                  "
"                                 ███████████████                                "
"                                 ███ ▐ ███ ▌ ███                                "
"                                 ███████▼███████                                "
"                                  █████████████                                 "
"                                    █████████                                   "
"                                     ▀▀   ▀▀                                    "
"                                                                                "
"                                     ◆ saya                                     "
"                      Ask your databases in plain language.                     "
"                                                                                "
"                                 databases  demo                                "
"                                                                                "
"         Each request becomes a chapter — activity, answer, and results.        "
"                                                                                "
"                                   try asking                                   "
"           What are the most common channel values in customer_contacts?        "
"               How does amount_cents change by order_date in orders?            "
"                                                                                "
"               / commands     @ tables     ? help     Ctrl+C quit               "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
